--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li><a href="#" (click)="onClickToShoppingList()">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -37,7 +37,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <ul class="list-group-item "*ngFor="let ingredient of recipe.ingredients">
+    <ul class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
       {{ ingredient.name}} - {{ingredient.amount}}
     </ul>
   </div>
